# truthlens-ai

./: .gitignore  README.md  backend_test.py  build.sh  design_guidelines.json  pyproject.toml  render.yaml  vercel.json
.emergent/: emergent.yml
backend/: build.sh  pyproject.toml  requirements.txt  server.py
backend/emergentintegrations/: __init__.py
backend/emergentintegrations/llm/: __init__.py  chat.py
backend/tests/: test_enhanced_features.py
chrome-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: CredibilityScore.js  ExplainabilityView.js  KnowledgeGraph.js  Logo.js  Sidebar.js  ThreeScene.js
frontend/src/lib/: api.js
frontend/src/pages/: Analysis.js  Dashboard.js  Landing.js
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json
test_reports/pytest/: pytest_results.xml
